@@ -1,7 +1,7 @@
            SPELL=init.d
-         VERSION=1.03
+         VERSION=1.04
          ENTERED=20020719
-         UPDATED=20021002
+         UPDATED=20021016
       MAINTAINER=nealbirch@attbi.com
            SHORT='Install functions and selected system scripts then sets runlevels and  priorities.'
 cat << EOF
