@@ -1,7 +1,7 @@
 The scripts that have been setup to install properly with the init.d
 spell are kept in the scriptdir/ directory. As new scripts are updated,
 they will be added to the que. This way, you will not need to recast
-the spell to get the updated scripts. Also, the init.d sets up the run
-levels and priorities.
+the spell to get the updated scripts. Also, the init.d spell sets up 
+the run levels and priorities for these scripts.
 
 nealbirch@attbi.com
