@@ -1,6 +1,6 @@
 #!/bin/bash
 # /etc/init.d/networking.sh
-# SGL-script-version=20020924
+# SGL-script-version=20021020
 # this sets the run levels and priority for links
 # SGL-START:3 4 5:S30
 # SGL-STOP:0 1 2 6:K70
@@ -8,6 +8,7 @@
 # for each network device, with the same name as the device
 # with the following variables set as needed:
 # MODULE=
+# leave MODULE= blank if device driver built into the kernel
 # MODE=dynamic if you use dhcpcd
 # MODE=static if you do not
 # The following is needed only if you do not use dhcpcd
@@ -15,6 +16,7 @@
 # BROADCAST=
 # NETMASK=
 # GATEWAY=
+# Leave GATEWAY= blank  if your gateway is set by another program.
 
 . /etc/init.d/functions
 netdevdir=/etc/sysconfig/network
@@ -38,11 +40,14 @@ case "$1" in
 	    if [ -f $netdevdir/$DEVICE ]; then
 		unset MODE MODULE IP BROADCAST NETMASK GATEWAY
 		. $netdevdir/$DEVICE
-		if [ -z "$MODE" ] || [ -z "$MODULE" ]; then
+		if [ -z "$MODE" ]; then
 		    echo " There are errors in $netdevdir/$DEVICE"
 		else
-		    echo "$1ing $0 with $DEVICE ..."
-		    loadproc modprobe  $MODULE
+# only load module if necessary; i.e. not built into kernel.
+		    if [ ! -z "$MODULE" ]; then
+			echo "$1ing $0 with $DEVICE ..."
+			loadproc modprobe  $MODULE
+		    fi
 		    if [ `echo $MODE` = dynamic ]; then
 			echo "$1ing dhcpcd on $DEVICE ..."
 			if [ -e $DHCPD_PATH$DEVICE.pid ]; then
@@ -55,7 +60,10 @@ case "$1" in
 		    elif [ `echo $MODE` = static ]; then
 			echo "Setting up static network on $DEVICE"
 			ifconfig  $DEVICE $IP broadcast $BROADCAST netmask $NETMASK
-			route add default gateway $GATEWAY
+# check if GATEWAY is set; gateway is set by PPP in some cases
+			if [ ! -z "$GATEWAY" ]; then
+			    route add default gateway $GATEWAY
+			fi
 			evaluate_retval
 		    else 
 			echo " There are errors in $netdevdir/$DEVICE"
@@ -70,8 +78,7 @@ case "$1" in
 	    if [ -f $netdevdir/$DEVICE ]; then
 		unset MODE MODULE IP BROADCAST NETMASK GATEWAY
 		. $netdevdir/$DEVICE
-# this is probably unnecessary since these checks were made during start, but...
-		if [ -z "$MODE" ] || [ -z "$MODULE" ]; then
+		if [ -z "$MODE" ]; then
 		    echo " There are errors in $netdevdir/$DEVICE"
 		else
 		    if [ `echo $MODE` = dynamic ]; then 
@@ -82,9 +89,12 @@ case "$1" in
 		    else
 			ifconfig $DEVICE down
 		    fi
-		    echo "$1ping $0 on $DEVICE ..."
-		    modprobe -r $MODULE
-		    evaluate_retval
+# only do this if network device is a module
+		    if [ ! -z "$MODULE" ]; then
+			echo "$1ping $0 on $DEVICE ..."
+			modprobe -r $MODULE
+			evaluate_retval
+		    fi
 		fi
 	    fi
 	done
@@ -100,7 +110,7 @@ case "$1" in
 	for DEVICE in $devices; do
 	    unset MODE MODULE IP BROADCAST NETMASK GATEWAY
 	    . $netdevdir/$DEVICE
-		if [ -z "$MODE" ] || [ -z "$MODULE" ]; then
+		if [ -z "$MODE" ]; then
 		    echo " There are errors in $netdevdir/$DEVICE"
 		else
 		    if [ `echo $MODE` = dynamic ]; then
@@ -112,7 +122,7 @@ case "$1" in
 	;;
 
     *)
-	echo "Usage: $0 {start|stop|restart|status}"
+	echo "Usage: $0 {start|stop|restart|status} [DEVICE]"
 	exit 1
 	;;
 esac
